@@ -1,6 +1,9 @@
 			   XPCE ChangeLog
 			   ==============
 
+* ENHANCED: Operator handling in PceEmacs Prolog mode.
+
+
 VERSION 6.6.3, distributed with SWI-Prolog 5.6.3
 ================================================
 
